Change dropdown to default and fixed overflow

--- a/src/components/BootloaderContainer/Bootloader/Bootloader.module.scss
+++ b/src/components/BootloaderContainer/Bootloader/Bootloader.module.scss
@@ -3,11 +3,11 @@
 .bootloader {
     height: 10rem;
     display: flex;
-    justify-content: center;
     align-items: stretch;
     @include styles.alternate-code-text;
     gap: 1rem;
     font-size: 1.1rem;
     padding: 1px;
-    overflow: hidden;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
