--- a/src/components/BootloaderContainer/Bootloader/DropElement/DropElement.module.scss
+++ b/src/components/BootloaderContainer/Bootloader/DropElement/DropElement.module.scss
@@ -11,6 +11,7 @@
 
     text-align: center;
     overflow: hidden;
+    min-width: 6rem;
 }
 
 .dragOver {
